# nativelibrary-dotnet-core

./: CMakeLists.txt  Dockerfile  nativelib_dotnet.sln
.devcontainer/: devcontainer.json
NativeLibrary/: CMakeLists.txt  Class1.cs  NativeLibrary.csproj  UnmanagedCallerOnlyAttribute.cs
TestNativeLibrary/: CMakeLists.txt  main.c
